git commit -m "nav graph сurve realization" git push -u origin main

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,21 +14,6 @@
             app:destination="@id/infoFragment" />
     </fragment>
     <fragment
-        android:id="@+id/articleFragment"
-        android:name="com.abyte.valet.testan40121.fragments.ArticleFragment"
-        android:label="fragment_article"
-        tools:layout="@layout/fragment_article" />
-    <fragment
-        android:id="@+id/personalFragment"
-        android:name="com.abyte.valet.testan40121.fragments.PersonalFragment"
-        android:label="fragment_personal"
-        tools:layout="@layout/fragment_personal" />
-    <fragment
-        android:id="@+id/ideaFragment2"
-        android:name="com.abyte.valet.testan40121.fragments.IdeaFragment"
-        android:label="fragment_idea"
-        tools:layout="@layout/fragment_idea" />
-    <fragment
         android:id="@+id/infoFragment"
         android:name="com.abyte.valet.testan40121.fragments.InfoFragment"
         android:label="fragment_info"
@@ -37,4 +22,19 @@
             android:id="@+id/action_infoFragment_to_projectsFragment2"
             app:destination="@id/projectsFragment2" />
     </fragment>
+    <fragment
+        android:id="@+id/articleFragment2"
+        android:name="com.abyte.valet.testan40121.fragments.ArticleFragment"
+        android:label="fragment_article"
+        tools:layout="@layout/fragment_article" />
+    <fragment
+        android:id="@+id/ideaFragment2"
+        android:name="com.abyte.valet.testan40121.fragments.IdeaFragment"
+        android:label="fragment_idea"
+        tools:layout="@layout/fragment_idea" />
+    <fragment
+        android:id="@+id/personalFragment2"
+        android:name="com.abyte.valet.testan40121.fragments.PersonalFragment"
+        android:label="fragment_personal"
+        tools:layout="@layout/fragment_personal" />
 </navigation>
