--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/btn_project"
+        android:id="@+id/projectsFragment2"
         android:icon="@drawable/work_24"
-        android:title="Projects" />
+        android:title="@string/btn_1" />
 
     <item
-        android:id="@+id/btn_idea"
+        android:id="@+id/ideaFragment2"
         android:icon="@drawable/idea_24"
-        android:title="Ideas" />
+        android:title="@string/btn_2" />
 
     <item
-        android:id="@+id/btn_stats"
+        android:id="@+id/articleFragment2"
         android:icon="@drawable/stats_24"
-        android:title="articles" />
+        android:title="@string/btn_3" />
 
     <item
-        android:id="@+id/btn_person"
+        android:id="@+id/personalFragment2"
         android:icon="@drawable/person_24"
-        android:title="articles" />
+        android:title="@string/btn_4"/>
 </menu>
