--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ArticleFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/article_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/hello_article_fragment" />
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
