--- a/app/src/main/res/layout/fragment_idea.xml
+++ b/app/src/main/res/layout/fragment_idea.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.IdeaFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/hello_idea_fragment" />
+        />
 
 </FrameLayout>
