--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.PersonalFragment">
+    tools:context=".fragments.PersonalFragment"
+    android:background="@color/purple_700">
 
     <TextView
         android:layout_width="match_parent"
