--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_fraph"
-    app:startDestination="@id/ideaFragment2">
+    app:startDestination="@id/projectsFragment2">
     <fragment
         android:id="@+id/projectsFragment2"
         android:name="com.abyte.valet.testan40121.fragments.ProjectsFragment"
@@ -12,6 +12,11 @@
         <action
             android:id="@+id/action_projectsFragment2_to_infoFragment"
             app:destination="@id/infoFragment" />
+        <argument
+            android:name="progects"
+            app:argType="com.abyte.valet.testan40121.model.Content[]"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/infoFragment"
