--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,21 +8,21 @@
         android:id="@+id/projectsFragment2"
         android:name="com.abyte.valet.testan40121.fragments.ProjectsFragment"
         android:label="fragment_projects"
-        tools:layout="@layout/fragment_projects" >
+        tools:layout="@layout/fragment_projects">
         <action
             android:id="@+id/action_projectsFragment2_to_infoFragment"
             app:destination="@id/infoFragment" />
         <argument
             android:name="progects"
+            android:defaultValue="@null"
             app:argType="com.abyte.valet.testan40121.model.Content[]"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/infoFragment"
         android:name="com.abyte.valet.testan40121.fragments.InfoFragment"
         android:label="fragment_info"
-        tools:layout="@layout/fragment_info" >
+        tools:layout="@layout/fragment_info">
         <action
             android:id="@+id/action_infoFragment_to_projectsFragment2"
             app:destination="@id/projectsFragment2" />
@@ -40,7 +40,7 @@
         android:id="@+id/articleFragment2"
         android:name="com.abyte.valet.testan40121.fragments.ArticleFragment"
         android:label="fragment_article"
-        tools:layout="@layout/fragment_article" >
+        tools:layout="@layout/fragment_article">
         <action
             android:id="@+id/action_articleFragment2_to_infoFragment"
             app:destination="@id/infoFragment" />
@@ -49,7 +49,7 @@
         android:id="@+id/ideaFragment2"
         android:name="com.abyte.valet.testan40121.fragments.IdeaFragment"
         android:label="fragment_idea"
-        tools:layout="@layout/fragment_idea" >
+        tools:layout="@layout/fragment_idea">
         <action
             android:id="@+id/action_ideaFragment2_to_infoFragment"
             app:destination="@id/infoFragment" />
@@ -58,7 +58,7 @@
         android:id="@+id/personalFragment2"
         android:name="com.abyte.valet.testan40121.fragments.PersonalFragment"
         android:label="fragment_personal"
-        tools:layout="@layout/fragment_personal" >
+        tools:layout="@layout/fragment_personal">
         <action
             android:id="@+id/action_personalFragment2_to_infoFragment"
             app:destination="@id/infoFragment" />
@@ -68,4 +68,24 @@
         android:name="com.abyte.valet.testan40121.activitys.RegActivity"
         android:label="activity_reg"
         tools:layout="@layout/activity_reg" />
+    <fragment
+        android:id="@+id/FirstFragment"
+        android:name="com.abyte.valet.testan40121.activitys.FirstFragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/fragment_first">
+
+        <action
+            android:id="@+id/action_FirstFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/SecondFragment"
+        android:name="com.abyte.valet.testan40121.activitys.SecondFragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_second">
+
+        <action
+            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
 </navigation>
