--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_blue">#2196F3</color>
+    <color name="my_blue">#2979FF</color>
     <color name="my_orange">#FF5722</color>
 </resources>
