--- a/app/src/main/res/layout/add_list_view.xml
+++ b/app/src/main/res/layout/add_list_view.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_margin="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:background="@drawable/ic_bacground"
     android:orientation="vertical">
 
 
@@ -29,7 +30,7 @@
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
-        android:layout_height="160dp"/>
+        android:layout_height="160dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -37,7 +38,7 @@
         android:layout_margin="15dp"
         app:passwordToggleContentDescription="description">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
