--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_margin="10dp"
+    android:background="@drawable/ic_bacground"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -20,8 +22,7 @@
         <ImageView
             android:id="@+id/img"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="10"/>
+            android:layout_height="500dp"/>
 
         <TextView
             android:gravity="center"
@@ -29,8 +30,7 @@
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
