--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="my_blue">#2979FF</color>
+    <color name="my_blue_dark">#3D5AFE</color>
     <color name="my_orange">#FF5722</color>
 </resources>
