--- a/app/src/main/res/layout/add_list_view.xml
+++ b/app/src/main/res/layout/add_list_view.xml
@@ -2,52 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/ic_bacground"
+
     android:orientation="vertical">
 
-
-    <com.google.android.material.textfield.TextInputLayout
+    <LinearLayout
+        android:layout_margin="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        app:passwordToggleContentDescription="description">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:gravity="center"
+        android:background="@drawable/ic_bacground"
+        android:orientation="vertical">
+        <com.google.android.material.textfield.TextInputLayout
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textColorHint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:inputType="textEmailAddress"
-            android:id="@+id/et_name"
-            android:hint="Наименование главы"/>
+            android:layout_margin="22dp"
+            app:passwordToggleContentDescription="description">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="25sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:inputType="textEmailAddress"
+                android:id="@+id/et_name"
+                android:hint="Наименование главы"/>
 
-    <ImageView
-        android:id="@+id/iv_image"
-        android:layout_width="match_parent"
-        android:layout_height="160dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        app:passwordToggleContentDescription="description">
+        <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:maxHeight="160dp" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:inputType="textEmailAddress"
+            android:layout_margin="25dp"
+            app:passwordToggleContentDescription="description">
 
-            android:id="@+id/et_text"
-            android:hint="Тело главы"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:inputType="textEmailAddress"
+                android:id="@+id/et_text"
+                android:hint="Тело главы"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
