--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">@color/lb_control_button_color</color>
     <color name="white">#FFFFFFFF</color>
     <color name="my_blue">#2979FF</color>
     <color name="my_blue_dark">#3D5AFE</color>
