--- a/app/src/main/res/layout/fragment_placeholder_registration.xml
+++ b/app/src/main/res/layout/fragment_placeholder_registration.xml
@@ -71,13 +71,11 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/appCompatButton"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="260dp"
         android:background="@drawable/ic_registration"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
 </LinearLayout>
